# apero

./: .apero-ci.sh  .gitignore  .travis.yml  Makefile  README.md  apero-core.opam  apero-net.opam  apero.opam  ato-pervasives.descr  dune-project
example/actor/: aecho.ml  dune
example/actor_socket/: sactor.ml
example/echo/: echo.ml  jbuild
example/fnactor/: dune  fnactor_example.ml
example/lambdactor/: dune  lambdactor.ml  lambdactor.ml.NEW
example/monad/: dune  statem.ml
example/sactor/: Makefile  dune  sactor.ml
example/tactor/: dune  taecho.ml
src/: .merlin  aapplicative.ml  aapplicative.mli  acommon.ml  acommon.mli  afunctor.ml  afunctor.mli  alist.ml  alist.mli  amonad.ml  amonad.mli  amonoid.ml  amonoid.mli  apero.ml  apero.mli  applicative.ml  applicative.mli  aresult.ml  aresult.mli  common.ml  common.mli  functor.ml  functor.mli  jbuild  monad.ml  monad.mli  monoid.ml  monoid.mli  result.ml  result.mli
src/core/: actor.ml  actor.mli  apero.ml  atypes.ml  common.ml  common.mli  dune  fnactor.ml  fnactor.mli  id.ml  id.mli  iobuf.ml  iobuf.mli  jbuild  mvar.ml  mvar.mli  pcodec.ml  property.ml  property.mli  state.ml  state.mli  tactor.ml  tactor.mli  tcodec.ml  tcodec.mli  types.ml  uuid.ml  uuid.mli
src/net/: apero_net.ml  endpoint.ml  jbuild  net.ml  net.mli  tcpService.ml  tcpService.mli
test/test-result/: jbuild  test_result.ml
