opam-version: "1.2"
maintainer:   ["angelo@adlink-labs.tech"]
authors:      ["Angelo Corsaro"]
homepage:     "https://github.com/atolab"
bug-reports:  "https://github.com/atolab/ato-pervasives/issues/"
dev-repo:     "https://github.com/atolab/ato-pervasives.git"
tags:         ["ato"]

version:"0.2.0"
license: "EPL2"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"
]

available: [ocaml-version >= "4.03.0"]
